# rust-exercises

exercises/: progress.db
exercises/02_basic_calculator/04_panics/src/: lib.rs
exercises/02_basic_calculator/05_factorial/src/: lib.rs
exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/02_basic_calculator/07_for/src/: lib.rs
exercises/02_basic_calculator/08_overflow/src/: lib.rs
exercises/02_basic_calculator/09_saturating/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/04_visibility/src/: lib.rs
exercises/03_ticket_v1/05_encapsulation/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/01_trait/src/: lib.rs
exercises/04_traits/02_orphan_rule/src/: lib.rs
exercises/04_traits/05_trait_bounds/src/: lib.rs
exercises/04_traits/07_deref/src/: lib.rs
exercises/04_traits/12_copy/src/: lib.rs
exercises/04_traits/13_drop/src/: lib.rs
exercises/04_traits/14_outro/src/: lib.rs
exercises/05_ticket_v2/01_enum/src/: lib.rs
exercises/05_ticket_v2/02_match/src/: lib.rs
exercises/05_ticket_v2/03_variants_with_data/src/: lib.rs
exercises/05_ticket_v2/04_if_let/src/: lib.rs
exercises/05_ticket_v2/07_unwrap/src/: lib.rs
exercises/08_futures/01_async_fn/: Cargo.toml
exercises/08_futures/02_spawn/: Cargo.toml
exercises/08_futures/03_runtime/: Cargo.toml
exercises/08_futures/05_blocking/: Cargo.toml
helpers/mdbook-exercise-linker/: Cargo.toml
helpers/mdbook-link-shortener/: Cargo.toml
helpers/ticket_fields/: Cargo.toml
(+32 files in other folders)
